--- a/UI/HMI_WPF/WpfApp1/Tab_Main.xaml
+++ b/UI/HMI_WPF/WpfApp1/Tab_Main.xaml
@@ -6,7 +6,27 @@
              xmlns:local="clr-namespace:WpfApp1"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <StackPanel Margin="5">
+        <TextBlock Text="this is the mainpage of the UI" FontSize="20" FontWeight="Black"
+                   FontFamily="arial"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
             
-    </Grid>
+        </Grid>
+    </StackPanel>
 </UserControl>
