--- a/UI/HMI_WPF/WpfApp1/Tab_Main.xaml
+++ b/UI/HMI_WPF/WpfApp1/Tab_Main.xaml
@@ -6,9 +6,6 @@
              xmlns:local="clr-namespace:WpfApp1"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Margin="5">
-        <TextBlock Text="this is the mainpage of the UI" FontSize="20" FontWeight="Black"
-                   FontFamily="arial"/>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
@@ -26,7 +23,8 @@
                 <ColumnDefinition Width="50"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
-        </Grid>
-    </StackPanel>
+            <TextBlock Text="Machine Mode:" FontFamily="Arial" 
+                       FontSize="25" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"/>
+        <TextBlock Grid.Column="4" Grid.ColumnSpan="4"/>
+    </Grid>  
 </UserControl>
