--- a/UI/HMI_WPF/WpfApp1/MainWindow.xaml
+++ b/UI/HMI_WPF/WpfApp1/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1000" MaxHeight="600" 
-        MaxWidth="1000" ResizeMode="NoResize" WindowState="Normal">
+        MaxWidth="1000" ResizeMode="NoResize" WindowState="Normal" Loaded="Window_Loaded">
     <Grid Background="Pink">
         <Grid.RowDefinitions>
             <RowDefinition Height="65"/>
@@ -49,41 +49,6 @@
                 <ContentControl x:Name="contentControl01" />
             </Border>
         </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="8" VerticalAlignment="Bottom" Background="Beige" Button.Click="StackPanel_Click">
-            <StackPanel.Resources>
-                <!--will have btn style at here later-->
-            </StackPanel.Resources>
-            <TextBlock Text="Machine Mode:" Background="Beige" FontSize="12"/>
-            <Button x:Name="btnAuto" Margin="0,10,0,10">
-                <Grid>
-                    <TextBlock Text="Auto" VerticalAlignment="Center" HorizontalAlignment="Center"
-                               FontFamily="Arial" FontSize="20"/>
-                    <Rectangle Stroke="Black"  StrokeThickness="3" Width="90" Height="45"/>
-                </Grid>
-            </Button>
-            <Button x:Name="btnManual" Margin="2,10,0,10">
-                <Grid>
-                    <TextBlock Text="Manual" VerticalAlignment="Center" HorizontalAlignment="Center"
-                               FontFamily="Arial" FontSize="20"/>
-                    <Rectangle Stroke="Black"  StrokeThickness="3" Width="90" Height="45"/>
-                </Grid>
-            </Button>
-            <Button x:Name="btnCalib" Margin="0,10,0,10">
-                <Grid>
-                    <TextBlock Text="Calib" VerticalAlignment="Center" HorizontalAlignment="Center"
-                               FontFamily="Arial" FontSize="20"/>
-                    <Rectangle Stroke="Black"  StrokeThickness="3" Width="90" Height="45"/>
-                </Grid>
-            </Button>
-            <Button x:Name="btnSetting" Margin="0,10,0,10">
-                <Grid>
-                    <TextBlock Text="Setting" VerticalAlignment="Center" HorizontalAlignment="Center"
-                               FontFamily="Arial" FontSize="20"/>
-                    <Rectangle Stroke="Black"  StrokeThickness="3" Width="90" Height="45"/>
-                </Grid>
-            </Button>
-        </StackPanel>
-        
-               
+        <local:Tab_SwitchMode Grid.Row="1" Grid.Column="8"/>
     </Grid>
 </Window>
